# HivisionIDPhotos-cpp

./: .gitattributes  CMakeLists.txt  Hivision_SDK.cpp  Hivision_api.cpp  README-EN.md  README.md  README.md.md  main.cpp
include/: HIvision_SDK.h  Hivision_Java.h  MNN_LFFD.h  cmdline.h  example.txt  face_detect.h  human_matting.h  image_adjustment.h  main.h  tool.h  utils.h
include/opencv2/: cvconfig.h  imgproc.hpp
lib/: lib文件.txt
model/: model.txt
src/: face_detect.cpp  human_matting.cpp  image_adjustment.cpp  tool.cpp  utils.cpp
